--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
   <h3>Santos</h3>
   <h4>Livia</h4>
   <h5>Italo</h5>
+  <p>Parágrafo qualquer</p>
+  <span>Texto qualquer</span>
+  <a href="http://www.google.com">Google</a>
 </body>
 </html>
