--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jeferson é Gay</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <h1>Emerson</h1>
+  <h1>Emerson ✔</h1>
   <h2>Sousa</h2>
   <h3>Santos</h3>
   <h4>Livia</h4>
   <h5>Italo</h5>
   <p>Parágrafo qualquer</p>
-  <span>Texto qualquer</span>
+  <span class="paragrafo">Texto qualquer</span>
   <a href="http://www.google.com">Google</a>
+  <button>Enviar</button>
 </body>
 </html>
